--- a/src/main/resources/templates/views/mainPage.html
+++ b/src/main/resources/templates/views/mainPage.html
@@ -11,83 +11,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Flex:opsz,wght@6..144,400;6..144,700&display=swap" rel="stylesheet">
 <script th:src="@{js/jquery-3.7.1.min.js}"></script>
 <<script th:src="@{js/main.js}"></script>
+<link th:href="@{css/mainPage.css}" rel="stylesheet" />
 <style>
-/* 알림 모달 위치 변경 */
-.alert-modal-position {
-   margin-left: auto;
-   margin-right: 10vw;
-   margin-top : 8vh;
-}
-
-/* 영상 아래 가로스크롤바 생기는 거 때문에 제작 */
-html, body {
-    margin: 0;
-    padding: 0;
-    height: 100%; /* 높이 100% */
-    overflow-x: hidden; /* 가로 스크롤 없애기 */
-}
-/* 사이드바 뒷배경 조절 */
-.offcanvas {
-    background-color: rgba(255, 255, 255, 0.1); /* 완전 투명: 0, 살짝 투명: 0.1~0.5 */
-    backdrop-filter: blur(5px); /* 배경 블러 효과 주고 싶으면 */
-}
-.offcanvas .nav-link {
-    color: #ffffff !important;
-}
-/* 드롭다운 메뉴 배경 반투명 + 글씨 흰색 */
-.offcanvas .dropdown-menu {
-    background-color: rgba(255, 255, 255, 0.1) !important; /* 반투명 배경 */
-    backdrop-filter: blur(5px); /* 블러 효과 */
-    border: none;
-}
-
-.offcanvas .dropdown-menu .dropdown-item {
-    color: #ffffff !important; /* 글씨 흰색 */
-}
-.nav-link.dropdown-toggle::after {
-    display: none;  /* 화살표 제거 */
-}
-.offcanvas .dropdown-menu .dropdown-item:hover {
-    color: #ffffff !important;
-    background-color: rgba(255, 255, 255, 0.2) !important; /* hover 살짝 밝게 */
-}
-/* 드롭다운 예쁘게보이게 */
-.dropdown-menu {
-    background-color: rgba(255, 255, 255, 0.1); /* 완전 투명: 0, 살짝 투명: 0.1~0.5 */
-    backdrop-filter: blur(5px); /* 배경 블러 효과 주고 싶으면 */
-    border: none; /* 테두리 없애기 */
-}
-/* 글씨 크기랑 사이즈.. */
-.overlay-content h1 {
-    font-family: 'Google Sans Flex', sans-serif;
-    font-weight: 300;
-    color: #ffffff;
-   	font-size: 4.5rem !important;
-}
-.overlay-content h3 {
-    font-family: 'Google Sans Flex', sans-serif;
-    font-weight: 300;
-    color: #ffffff;
-}
-/* 비디오가 화면 덮게하는 설정 */
-.bg-video {
-    position: fixed; /* 화면 전체 덮기 */
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* 화면 꽉 채우기, 비율 유지 */
-    z-index: -1; /* 모든 콘텐츠 뒤로 */
-}
-/* 비디오 텍스트 오버레이*/
-.overlay-content {
-    position: relative;
-    z-index: 1;
-    color: white;
-    text-align: center;
-    padding-left : 1.5%;
-    padding-top: 27%;
-}
 </style>
 </head>
 <body>
