--- a/src/main/resources/templates/layouts/main_layout.html
+++ b/src/main/resources/templates/layouts/main_layout.html
@@ -9,7 +9,7 @@
 <link th:href="@{bootstrap/bootstrap.min.css}" rel="stylesheet" >
 <script th:src="@{js/jquery-3.7.1.min.js}"></script>
 <script th:src="@{js/main.js}"></script>
-	<link th:href="@{css/header.css}" rel="stylesheet" />
+<link th:href="@{css/header.css}" rel="stylesheet" />
 <style>
 </style>
 </head>
@@ -28,22 +28,22 @@
 			        <h1 class="modal-title fs-5 fw-bold" id="modalLabel">Alerts</h1>
 			        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 		      	</div>
-				<form id="modalAlertForm" action="login" method="post">
+				<form id="modalAlertForm" action="alertModal" method="post">
 					<div class="modal-body">	        
 						<div class="form-check form-switch mb-5 my-3">
-						<input class="form-check-input" type="checkbox" role="switch" id="updateAlert">
+						<input class="form-check-input" type="checkbox" role="switch" id="updateAlert" name="updateAlert" th:checked="${session.updateAlert}">
 						<label class="form-check-label" for="updateAlert">&nbsp;업데이트 알림 설정</label>
 						</div>
 			          	<div class="form-check form-switch mb-5 my-3">
-						<input class="form-check-input" type="checkbox" role="switch" id="emailAlert">
+						<input class="form-check-input" type="checkbox" role="switch" id="emailAlert" name ="emailAlert"  th:checked="${session.emailAlert}">
 						<label class="form-check-label" for="emailAlert">&nbsp;이메일 알림 설정</label>
 						</div>	        
 						<div class="form-check form-switch mb-5 my-3">
-						<input class="form-check-input" type="checkbox" role="switch" id="securityAlert">
+						<input class="form-check-input" type="checkbox" role="switch" id="securityAlert" name ="securityAlert" th:checked="${session.securityAlert}">
 						<label class="form-check-label" for="securityAlert">&nbsp;보안 정보 알림</label>
 						</div>	
 						<div class="form-check form-switch mb-5 my-3">
-						<input class="form-check-input" type="checkbox" role="switch" id="eventAlert">
+						<input class="form-check-input" type="checkbox" role="switch" id="eventAlert" name ="eventAlert" th:checked="${session.eventAlert}">
 						<label class="form-check-label" for="eventAlert">&nbsp;이벤트 정보 알림</label>
 						</div>	
 		    		</div>
