--- a/src/main/resources/templates/views/mainPage.html
+++ b/src/main/resources/templates/views/mainPage.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Flex:opsz,wght@6..144,400;6..144,700&display=swap" rel="stylesheet">
 <script th:src="@{js/jquery-3.7.1.min.js}"></script>
-<<script th:src="@{js/main.js}"></script>
+<script th:src="@{js/main.js}"></script>
 <link th:href="@{css/mainPage.css}" rel="stylesheet" />
 <style>
 </style>
@@ -123,19 +123,19 @@
 				<form id="modalAlertForm" action="alertModal" method="post">
 					<div class="modal-body">	        
 						<div class="form-check form-switch mb-5 my-3">
-						<input class="form-check-input" type="checkbox" role="switch" id="updateAlert">
+						<input class="form-check-input" type="checkbox" role="switch" id="updateAlert" name="updateAlert" th:checked="${session.updateAlert}">
 						<label class="form-check-label" for="updateAlert">&nbsp;업데이트 알림 설정</label>
 						</div>
 			          	<div class="form-check form-switch mb-5 my-3">
-						<input class="form-check-input" type="checkbox" role="switch" id="emailAlert">
+						<input class="form-check-input" type="checkbox" role="switch" id="emailAlert" name ="emailAlert"  th:checked="${session.emailAlert}">
 						<label class="form-check-label" for="emailAlert">&nbsp;이메일 알림 설정</label>
 						</div>	        
 						<div class="form-check form-switch mb-5 my-3">
-						<input class="form-check-input" type="checkbox" role="switch" id="securityAlert">
+						<input class="form-check-input" type="checkbox" role="switch" id="securityAlert" name ="securityAlert" th:checked="${session.securityAlert}">
 						<label class="form-check-label" for="securityAlert">&nbsp;보안 정보 알림</label>
 						</div>	
 						<div class="form-check form-switch mb-5 my-3">
-						<input class="form-check-input" type="checkbox" role="switch" id="eventAlert">
+						<input class="form-check-input" type="checkbox" role="switch" id="eventAlert" name ="eventAlert" th:checked="${session.eventAlert}">
 						<label class="form-check-label" for="eventAlert">&nbsp;이벤트 정보 알림</label>
 						</div>	
 		    		</div>
