레이아웃 위치 수정 및 회원가입 폼 작성

--- a/src/main/resources/templates/views/main/mainPage.html
+++ b/src/main/resources/templates/views/main/mainPage.html
@@ -16,10 +16,10 @@
 </style>
 </head>
 <body>
-<div class="container-fluid px-0">
+<div class="container-fluid px-5">
 	<div class="custom-container">
 		<!-- 헤더 -->
-		<div class="row my-3 ms-4 me-4">
+		<div class="row my-5 ms-4 me-4">
 			<div class="col-6">
 				<nav class="navbar navbar-dark">
 					<div class="container-fluid">
@@ -63,7 +63,7 @@
 						</th:block>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link text-white" href="#">Join</a>
+						<a class="nav-link text-white" th:href = "@{joinForm}">Join</a>
 					</li>
 				<li class="nav-item dropdown">
 			        <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
