--- a/src/main/resources/templates/layouts/main_layout.html
+++ b/src/main/resources/templates/layouts/main_layout.html
@@ -14,7 +14,7 @@
 </style>
 </head>
 <body>
-	<div class ="container-fluid">
+	<div class ="container-fluid px-5">
 		<div th:replace = "~{fragments/header::header}"></div>	
 		<div layout:fragment = "content"></div>
 		<div th:replace = "~{fragments/footer::footer}"></div>	
