--- a/src/main/resources/templates/layouts/main_layout.html
+++ b/src/main/resources/templates/layouts/main_layout.html
@@ -9,6 +9,7 @@
 <link th:href="@{bootstrap/bootstrap.min.css}" rel="stylesheet" >
 <script th:src="@{js/jquery-3.7.1.min.js}"></script>
 <script th:src="@{js/main.js}"></script>
+<script th:src="@{js/user.js}"></script>
 <link th:href="@{css/header.css}" rel="stylesheet" />
 <style>
 </style>
