2026_0109_회원가입폼 수정

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -34,7 +34,7 @@
                 </th:block>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="#">Join</a>
+                <a class="nav-link text-dark" th:href="@{joinForm}">Join</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-bs-toggle="dropdown">My page</a>
