--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -30,7 +30,7 @@
                   <a class="nav-link text-dark" th:href="@{loginForm}">Login</a>
                 </th:block>
                 <th:block th:if="${session.isLogin}">
-                  <a class="nav-link text-dark" href="#">Logout</a>
+                  <a class="nav-link text-dark" th:href="@{loginOut}">Logout</a>
                 </th:block>
               </li>
               <li class="nav-item">
