--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -37,7 +37,7 @@
                 <a class="nav-link text-dark" th:href="@{joinForm}">Join</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-bs-toggle="dropdown">My page</a>
+                <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-bs-toggle="dropdown" style ="cursor : pointer">My page</a>
                 <ul class="dropdown-menu text-dark">
                   <li><a class="dropdown-item text-dark" href="#">Edit profile</a></li>
                   <li><a class="nav-link text-dark" th:href="@{#}" data-bs-toggle="modal" data-bs-target="#alertModal">Alerts</a></li>
