--- a/src/main/resources/static/css/mainPage.css
+++ b/src/main/resources/static/css/mainPage.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+.nav .dropdown-menu .dropdown-item:hover,
+.nav .dropdown-menu .dropdown-item:focus {
+    background-color: rgba(0,0,0,0.06) !important;
+}
 /* 알림 모달 위치 변경 */
 .alert-modal-position {
    margin-left: auto;
@@ -23,26 +27,33 @@ html, body {
 }
 /* 드롭다운 메뉴 배경 반투명 + 글씨 흰색 */
 .offcanvas .dropdown-menu {
-    background-color: rgba(255, 255, 255, 0.1) !important; /* 반투명 배경 */
     backdrop-filter: blur(5px); /* 블러 효과 */
     border: none;
 }
 
-.offcanvas .dropdown-menu .dropdown-item {
-    color: #ffffff !important; /* 글씨 흰색 */
-}
+
 .nav-link.dropdown-toggle::after {
     display: none;  /* 화살표 제거 */
 }
-.offcanvas .dropdown-menu .dropdown-item:hover {
-    color: #ffffff !important;
-    background-color: rgba(255, 255, 255, 0.2) !important; /* hover 살짝 밝게 */
+.offcanvas .dropdown-menu .dropdown-item {
+    color: #ffffff !important; /* 글씨 흰색 */
+}
+.offcanvas .dropdown-menu .dropdown-item:hover,
+.offcanvas .dropdown-menu .dropdown-item:focus {
+    background-color: rgba(255,255,255,0.1) !important;
+}
+.dropdown-item:hover,
+.dropdown-item:focus {
+    background-color: transparent !important;
 }
 /* 드롭다운 예쁘게보이게 */
 .dropdown-menu {
     background-color: rgba(255, 255, 255, 0.1); /* 완전 투명: 0, 살짝 투명: 0.1~0.5 */
     backdrop-filter: blur(5px); /* 배경 블러 효과 주고 싶으면 */
     border: none; /* 테두리 없애기 */
+}
+.nav-link.dropdown-toggle {
+    cursor: pointer !important;
 }
 /* 글씨 크기랑 사이즈.. */
 .overlay-content h1 {
