--- a/src/main/resources/templates/views/main/mainPage.html
+++ b/src/main/resources/templates/views/main/mainPage.html
@@ -72,7 +72,7 @@
 			        </a>
 			        <ul class="dropdown-menu text-white">
 			          <li><a class="dropdown-item text-white" href="#">Edit profile</a></li>
-			           <li><a class="nav-link text-white"
+			           <li> <a href="#" class="dropdown-item text-white"
   										data-bs-toggle="modal" data-bs-target="#alertModal">Alerts</a></li>
 			          <li><hr class="dropdown-divider text-white"></li>
 			          <li><a class="dropdown-item text-white" href="#">My Diary</a></li>
