회원가입 ui 업데이트:

--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -59,7 +59,7 @@
 #loginForm h2 {
     font-size: 38px;
     font-weight: 700;
-    color: #6A8E3D;
+    color: rgb(108, 142, 62);
     margin-bottom: 40px;
 }
 
