--- a/src/main/resources/templates/views/main/mainPage.html
+++ b/src/main/resources/templates/views/main/mainPage.html
@@ -53,7 +53,7 @@
 				</nav>
 			</div>
 			 <div class="col-6 d-flex justify-content-end align-items-center">
-				<ul class="nav justify-content-end" style ="margin-right :50px;">
+				<ul class="nav justify-content-end" >
 					<!-- 로그인 폼 용 -->
 					<li class="nav-item">
 						<th:block th:unless="${session.isLogin}"><!-- 로그인 아웃 상태 -->
