--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -15,7 +15,7 @@
 		</button>
         <!-- 로고 -->
         <a th:href ="@{mainPage}">
-        	<img src="/upload/main/mainLogo.png" style="width:200px;" class ="ms-2">
+        	<img src="/upload/main/mainLogo2.png" style="width:200px;" class ="ms-2">
         </a>
       </div>
 
