--- a/src/main/resources/templates/views/userUpdateForm.html
+++ b/src/main/resources/templates/views/userUpdateForm.html
@@ -20,6 +20,7 @@
 	*/-->
 	<script src=
 	"https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+	<th:block th:if="${session.user != null}">
 		<div class="row my-5" id="global-content">
 			<div class="col">
 				<div class="row my-3 text-center">
