--- a/src/main/resources/templates/views/user/loginForm.html
+++ b/src/main/resources/templates/views/user/loginForm.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <div layout:fragment="content" id="global-content" class="login-container">
+    
+    
         <!-- 좌측 이미지 -->
         <div class="login-left">
             <img th:src="@{/upload/main/mainbackground.png}" alt="Login Image">
@@ -16,6 +18,12 @@
 
         <!-- 우측 로그인폼 -->
         <div class="login-right">
+        <th:block th:unless="${#strings.isEmpty(session.loginMsg)}">
+        <h4 class="fw-bold my-3 text-center text-primary"
+            th:text="${session.loginMsg}">
+            로그인이 필요한 서비스
+        </h4>
+    		</th:block>
             <form id="loginForm" action="login" method="post">
                 <h2 class="fw-bold">User Login</h2>
                 <fieldset>
