회원 정보 수정 폼 css 적용  완료

--- a/src/main/resources/templates/views/joinForm.html
+++ b/src/main/resources/templates/views/joinForm.html
@@ -5,13 +5,13 @@
 <head>
 <meta charset="UTF-8">
 <title>joinForm</title>
-<link th:href="@{/css/joinForm.css}" rel="stylesheet" />
+<link th:href="@{/css/userForm.css}" rel="stylesheet" />
 <script src=
 	"https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 </head>
 <body>
 <th:block layout:fragment="content">
-<div class="join-box">
+<div class="form-box">
 <div class="container mb-2" >
 	<div class ="row my-5">
 		<div class ="col">
