로그인 시 회원 가입 폼 이용 차단 적용

--- a/src/main/resources/templates/layouts/main_layout.html
+++ b/src/main/resources/templates/layouts/main_layout.html
@@ -56,6 +56,8 @@
 	    	</div>	    
 		</div>
 	</div>	
+	<!-- joinForm 로그인 상태로 들어갈 시 뜨는 알림  -->
+	<script th:if="${msg != null}"> alert('[[${msg}]]');</script>
 <script th:src="@{bootstrap/bootstrap.bundle.min.js}"></script>
 <script th:src="@{js/user.js}"></script>
 </body>
