--- a/src/main/resources/templates/views/userUpdateForm.html
+++ b/src/main/resources/templates/views/userUpdateForm.html
@@ -145,7 +145,7 @@
 						</div>
 					</div>					
 					<div class="row mb-3 mt-5">				
-						<div class="col-8 offset-2">
+						<div class="col-8 offset-2 text-end">
 							<input type="submit" value="수정하기" class="btn btn-success">
 						</div>
 					</div>
