--- a/src/main/resources/templates/views/main/mainPage.html
+++ b/src/main/resources/templates/views/main/mainPage.html
@@ -40,8 +40,8 @@
 										<ul class="dropdown-menu">
 											<li><a class="dropdown-item text-white">꿀팁 게시판</a></li>
 											<li><a class="dropdown-item text-white">반려동물 자랑 게시판</a></li>
-											<li><a class="dropdown-item text-white">실종동물 게시판</a></li>
-											<li><a class="dropdown-item text-white">입양 게시판</a></li>
+											<li><a class="dropdown-item text-white"  th:href = "@{missingBoard}">실종동물 게시판</a></li>
+											<li><a class="dropdown-item text-white" th:href = "@{adoptBoard}">입양 게시판</a></li>
 										</ul>
 									</li>
 									<li class="nav-item"><a class="nav-link fw-bold">병원</a></li>
