--- a/src/main/resources/templates/layouts/main_layout.html
+++ b/src/main/resources/templates/layouts/main_layout.html
@@ -9,7 +9,6 @@
 <link th:href="@{bootstrap/bootstrap.min.css}" rel="stylesheet" >
 <script th:src="@{js/jquery-3.7.1.min.js}"></script>
 <script th:src="@{js/main.js}"></script>
-
 <link th:href="@{css/header.css}" rel="stylesheet" />
 <style>
 </style>
@@ -17,7 +16,9 @@
 <body>
 	<div class ="container-fluid px-5">
 		<div th:replace = "~{fragments/header::header}"></div>	
-		<div layout:fragment = "content"></div>
+       		 <main class="mt-4">
+		        <div layout:fragment="content"></div>
+		    </main>
 		<div th:replace = "~{fragments/footer::footer}"></div>	
 	</div>
 	<!-- 모달 로그인 폼 추가 -->
