--- a/src/main/resources/templates/views/joinForm.html
+++ b/src/main/resources/templates/views/joinForm.html
@@ -4,7 +4,7 @@
 	layout:decorate="~{layouts/main_layout}">
 <head>
 <meta charset="UTF-8">
-<title>joinForm</title>
+<title>회원 가입</title>
 <link th:href="@{/css/userForm.css}" rel="stylesheet" />
 <script src=
 	"https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
