--- a/src/main/resources/templates/views/userUpdateForm.html
+++ b/src/main/resources/templates/views/userUpdateForm.html
@@ -9,6 +9,8 @@
 		xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"		
 		layout:decorate="~{layouts/main_layout}">
 <head>
+	<meta charset="UTF-8">
+	<title>회원 정보 수정</title>
 	<link th:href="@{/css/userForm.css}" rel="stylesheet" />
 </head>
 	<!--/* 
