--- a/src/main/resources/templates/views/main/mainPage.html
+++ b/src/main/resources/templates/views/main/mainPage.html
@@ -84,7 +84,7 @@
 			        </ul>
 			     </li>
 				<li class="nav-item">
-					<a class="nav-link text-white"  th:href = "${orderPage}">Order / Delivery</a>
+					<a class="nav-link text-white" th:href="@{/productList}">Order / Delivery</a>
 				</li>
 			</ul>
 			</div>
