--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -48,7 +48,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="#">Order / Delivery</a>
+               <a class="nav-link text-white" th:href="@{/productList}">Order / Delivery</a>
               </li>
             </ul>
           </div>
