--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -48,7 +48,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-               <a class="nav-link text-white" th:href="@{/productList}">Order / Delivery</a>
+               <a class="nav-link text-dark" th:href="@{/productList}">Order / Delivery</a>
               </li>
             </ul>
           </div>
@@ -75,7 +75,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle fw-bold" data-bs-toggle="dropdown" style="cursor:pointer">게시판</a>
             <ul class="dropdown-menu">
-              <li><a class="dro pdown-item text-white" th:href="@{/board(category = 1)}">꿀팁 게시판</a></li>
+              <li><a class="dropdown-item text-white" th:href="@{/board(category = 1)}">꿀팁 게시판</a></li>
               <li><a class="dropdown-item text-white" th:href="@{/board(category = 2)}">반려동물 자랑 게시판</a></li>
               <li><a class="dropdown-item text-white" th:href="@{/board(category = 3)}">실종동물 게시판</a></li>
               <li><a class="dropdown-item text-white" th:href="@{/board(category = 4)}">입양 게시판</a></li>
